# argus-dataplat

./: .env.example  .gitignore  ARGUS_MIGRATION.md  CLAUDE.md  FUNDAMENTALS_PLAN.md  OPTIONS_BACKFILL_PLAN.md  QUOTE.md  README.md  SEC_EDGAR_PLAN.md  VISION.md  docker-compose.yml  justfile  pyproject.toml
.githooks/: pre-commit
.notes/: quickref.md
.pi/: AGENTS.md  CLAUDE.md  mcp.json  settings.json  settings.local.json
.pi/agents/: backend-trpc.md  data-engineer.md  explore.md  frontend-ui.md  infra-tooling.md
.pi/extensions/: dev-helpers.ts  git-guards.ts  security-gates.ts  skill-loader.ts
.pi/prompts/: doctor.md  feature-plan.md  help.md  progress.md  refactor.md  review.md  security-check.md  skills.md  test-plan.md
.pi/rules/: architecture.md  base-overrides.md  base.md  codemogger.md  git.md  prompt-refinement.md  protobuf.md  skill-loader.md
docs/: BUILD_PLAN.md  FUNDAMENTALS_PLAN.md  INFRA_KAFKA_PLAN.md  KAFKA_CLICKHOUSE_STREAMING_SPEC.md  KAFKA_REDPANDA_IMPL_SPEC.md  KAFKA_SCHWAB_STREAMING_SPEC.md  SIGNAL_SYSTEM_PLAN.md  TRADING_ALGORITHM_PLAN.md  TRADING_STRATEGY_ASSESSMENT.md  ZERO_DTE_BOT.md
queries/: README.md  beta_vs_spy.sql  cross_asset_correlation.sql  dividend_yield_ranking.sql  earnings_risk_premium.sql  fundamentals_screener.sql  macro_dashboard.sql  overnight_gaps.sql  real_yield.sql  regime_dashboard.sql  sector_rotation.sql  volatility_surface.sql  yield_curve_history.sql
scripts/: migrate_to_cloud.sh  schwab_quotes_to_clickhouse.py
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  (+2 more)
tests/: conftest.py
(+230 files in other folders)
