[project]
name = "dataplat"
version = "0.1.0"
description = "Argus data platform — ClickHouse analytical store with Schwab + Polygon ingestion"
requires-python = ">=3.12"
dependencies = [
    "schwabdev>=3.0",
    "clickhouse-connect>=0.8,<0.9",
    "polars>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataplat"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
